# TestFlow

./: Cargo.toml  SETUP.md
backend/: .env.example  Cargo.toml  README.md
backend/src/: config.rs  dto.rs  errors.rs  main.rs  models.rs
docs/: TESTING.md  backend_development_plan.md  project_documentation.md
frontend/: .npmrc  Dockerfile  gradle.properties  package.json  settings.gradle.kts
frontend/composeApp/: build.gradle.kts
frontend/composeApp/src/androidMain/kotlin/ru/foxteam/testflow/: MainActivity.kt  Platform.android.kt
frontend/composeApp/src/commonMain/kotlin/ru/foxteam/testflow/: App.kt  Greeting.kt  Platform.kt
frontend/composeApp/src/commonMain/kotlin/ru/foxteam/testflow/base/: BaseViewModel.kt  Error.kt  Networkerror.kt  Result.kt
frontend/composeApp/src/jsMain/kotlin/ru/foxteam/testflow/: Platform.js.kt
frontend/composeApp/src/jvmMain/kotlin/ru/foxteam/testflow/: Platform.jvm.kt  main.kt
frontend/composeApp/src/wasmJsMain/kotlin/ru/foxteam/testflow/: Platform.wasmJs.kt
frontend/composeApp/src/webMain/kotlin/ru/foxteam/testflow/: main.kt
frontend/composeApp/src/webMain/resources/: index.html
migrations/: 001_init.sql
src/: auth.rs  main.rs
src/handlers/: auth_handler.rs  task_handler.rs  user_handler.rs
